# cookiecutter-python-windsurf

./: .windsurfrules  README.md  Taskfile.yaml  cookiecutter-python-windsurf.code-workspace  cookiecutter.json
hooks/: post_gen_project.py
{{cookiecutter.project_slug}}/: .gitignore  .pre-commit-config.yaml  .python-version  .python-versions  .windsurfrules  README.md  Taskfile.yaml  mkdocs.yml  pyproject.toml
{{cookiecutter.project_slug}}/.github/workflows/: ci.yml  release.yml
{{cookiecutter.project_slug}}/docs/: index.md
{{cookiecutter.project_slug}}/scripts/: gen_ref_pages.py
{{cookiecutter.project_slug}}/src/{{cookiecutter.package_name}}/: __main__.py  cli.py  example.py
{{cookiecutter.project_slug}}/tests/: test_example.py
